# adoff

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  OPEN-CORE-MODEL.md  PRIVACY.md  PRODUCT.md  README.md  SECURITY.md
.claude/: API-CONTRACT-vpn.md  CHAT-PROMPTS-standalone.md  HANDOVER.md  PLAN-autofix-adleak.md  PLAN-autofix-dashboard-decisionale.md  PLAN-kv-quota-session-fix.md  PLAN-site-restyle-cleanup.md  PLAN-vpn-dns-redesign.md  PROGRESS-vpn-premium.md  PROGRESS.md  PROJECT-TOD.md  PROMPTS-vpn-parallel-chats.md  SPEC-checkout-premium.md  TEST-REPORT-vpn.md  TODO.md  codemap.json  settings.json
AdOff/: .gitignore  README.md  pubspec.yaml
AdOff-desktop/: .env.example  CLAUDE.md  README.md  package.json
AdOff-desktop/src-tauri/: Cargo.toml  tauri.conf.json
AdOff-desktop/src-tauri/src/: main.rs
app/: manifest (Copia in conflitto di leobox 2026-06-22).json  manifest.json
app-firefox/: .amo-upload-uuid  amo-metadata.json  manifest (Copia in conflitto di leobox 2026-06-22).json  manifest.json
app-safari/: manifest (Copia in conflitto di leobox 2026-06-22).json  manifest.json
site/: AUDIT_ES_TUTEO_REPORT.md  BingSiteAuth.xml  CLAUDE.md  _headers  _redirects  about.html  accessibility.html  account.html  ad-blocker-brave.html  ad-blocker-chrome.html  adblock-detector.html  admin-console.html  adoff-chat.js  adoff-footer.js  adoff-i18n.js  adoff-nav.js  affiliate-tracking.js  affiliati.html  android-ad-blocker.html  android-dns.html  android.html  autofix-status.json  best-ad-blocker-2026.html  block-video-ads.html  bypass-anti-adblock.html  (+34 more)
(+1255 files in other folders)
